# quackQuery

./: LICENSE  README.md  pyproject.toml
app/: main.py
app/core/: guardrails.py  text2sql.py  viz.py
app/db/: meta.py
app/duck/: engine.py  ingest.py
app/storage/: files.py
app/ui/pages/: ask.py  datasource.py  history.py  home.py
data/: meta.sqlite3  meta.sqlite3-shm  meta.sqlite3-wal  quick_query.duckdb
uploads/: aeae0d3d532443e09b06da2697c67954_data.csv
